docs(readme): document tap mode alongside proxy mode
The tap-mode work that lands with PR #41 changes Kapture from
"proxy-only with tap on the roadmap" to "two co-equal capture
modes". README now reflects that:

- "How it works" leads with Tap mode (the new, less-known path):
  one -javaagent flag, no proxy in the wire, TLS preserved end-to-end
  against the real broker. Then proxy mode as the universal
  fallback for non-JVM / remote / chaos-injection cases.
- "Install" gains a "Using tap mode" subsection with the agent
  build + -javaagent recipe. A note flags that the JAR isn't yet
  shipped as a release asset — follow-up.
- "Roadmap" bumps the tap-mode entry from "coming" to "shipped"
  and elevates the eBPF taps (librdkafka, Go) as the next move
  toward the ~95%-of-the-market goal.

No code changes — README only.